# signal_decomposition

./: .gitignore  README.md.txt
include/: ica.h  mixer.h  wave_gen.h
src/: ica.cpp  mixer.cpp  scikit_example_mixed.csv  wave_gen.cpp
tests/: CMakeLists.txt  signal_decomposition_test.cc  test_mixer_sig_gen_from_file.txt  test_mixer_sig_gen_from_file_missing_arg_header.txt  test_mixer_sig_gen_from_file_missing_arg_instruction.txt  test_mixer_sig_gen_from_file_too_many_sigs.txt
